// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typeboxResolver > should return a single error from typeboxResolver when validation fails 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Expected value of union",
      "ref": undefined,
      "type": "53",
    },
    "birthYear": {
      "message": "Expected number",
      "ref": undefined,
      "type": "29",
    },
    "dateStr": {
      "message": "Expected Date object",
      "ref": undefined,
      "type": "11",
    },
    "email": {
      "message": "Expected string to match format 'email'",
      "ref": {
        "name": "email",
      },
      "type": "48",
    },
    "enabled": {
      "message": "Expected boolean",
      "ref": undefined,
      "type": "10",
    },
    "like": [
      {
        "id": {
          "message": "Expected number",
          "ref": undefined,
          "type": "29",
        },
        "name": {
          "message": "Expected string",
          "ref": undefined,
          "type": "43",
        },
      },
    ],
    "password": {
      "message": "Expected string length greater or equal to 8",
      "ref": {
        "name": "password",
      },
      "type": "44",
    },
    "repeatPassword": {
      "message": "Expected string",
      "ref": undefined,
      "type": "43",
    },
    "tags": {
      "message": "Expected array",
      "ref": undefined,
      "type": "0",
    },
    "username": {
      "message": "Expected string",
      "ref": {
        "name": "username",
      },
      "type": "43",
    },
  },
  "values": {},
}
`;

exports[`typeboxResolver > should return all the errors from typeboxResolver when validation fails with \`validateAllFieldCriteria\` set to true 1`] = `
{
  "errors": {
    "accessToken": {
      "message": "Expected value of union",
      "ref": undefined,
      "type": "53",
      "types": {
        "29": "Expected number",
        "39": "Expected required property",
        "43": "Expected string",
        "53": "Expected value of union",
      },
    },
    "birthYear": {
      "message": "Expected number",
      "ref": undefined,
      "type": "29",
      "types": {
        "29": "Expected number",
      },
    },
    "dateStr": {
      "message": "Expected Date object",
      "ref": undefined,
      "type": "11",
      "types": {
        "11": "Expected Date object",
        "39": "Expected required property",
      },
    },
    "email": {
      "message": "Expected string to match format 'email'",
      "ref": {
        "name": "email",
      },
      "type": "48",
      "types": {
        "48": "Expected string to match format 'email'",
      },
    },
    "enabled": {
      "message": "Expected boolean",
      "ref": undefined,
      "type": "10",
      "types": {
        "10": "Expected boolean",
        "39": "Expected required property",
      },
    },
    "like": [
      {
        "id": {
          "message": "Expected number",
          "ref": undefined,
          "type": "29",
          "types": {
            "29": "Expected number",
          },
        },
        "name": {
          "message": "Expected string",
          "ref": undefined,
          "type": "43",
          "types": {
            "39": "Expected required property",
            "43": "Expected string",
          },
        },
      },
    ],
    "password": {
      "message": "Expected string length greater or equal to 8",
      "ref": {
        "name": "password",
      },
      "type": "44",
      "types": {
        "44": "Expected string length greater or equal to 8",
        "46": "Expected string to match pattern ^(.*[A-Za-z\\\\d].*)$",
      },
    },
    "repeatPassword": {
      "message": "Expected string",
      "ref": undefined,
      "type": "43",
      "types": {
        "39": "Expected required property",
        "43": "Expected string",
      },
    },
    "tags": {
      "message": "Expected array",
      "ref": undefined,
      "type": "0",
      "types": {
        "0": "Expected array",
        "39": "Expected required property",
      },
    },
    "username": {
      "message": "Expected string",
      "ref": {
        "name": "username",
      },
      "type": "43",
      "types": {
        "39": "Expected required property",
        "43": "Expected string",
      },
    },
  },
  "values": {},
}
`;
